--- a/dynamic-calendar-and-clocks-icons@fcusr.github.com/stylesheet.css
+++ b/dynamic-calendar-and-clocks-icons@fcusr.github.com/stylesheet.css
@@ -6,16 +6,20 @@
 
 .window-picker #dynamic-calendar-icon.icon-dropshadow {
     background-image: url('img/calendar-shadow-64.png');
+    background-size: 66px;
 }
 
 .window-picker #dynamic-clocks-icon.icon-dropshadow {
     background-image: url('img/clocks-shadow-64.png');
+    background-size: 74px;
 }
 
 .apps-menu #dynamic-calendar-icon.icon-dropshadow {
     background-image: url('img/calendar-shadow-32.png');
+    background-size: 37px;
 }
 
 .apps-menu #dynamic-clocks-icon.icon-dropshadow {
     background-image: url('img/clocks-shadow-32.png');
+    background-size: 41px;
 }
