--- a/dynamic-calendar-and-clocks-icons@fcusr.github.com/stylesheet.css
+++ b/dynamic-calendar-and-clocks-icons@fcusr.github.com/stylesheet.css
@@ -14,6 +14,11 @@
     background-size: 74px;
 }
 
+.window-picker #dynamic-weather-icon.icon-dropshadow {
+    background-image: url('img/weather-shadow-64.png');
+    background-size: 66px;
+}
+
 .apps-menu #dynamic-calendar-icon.icon-dropshadow {
     background-image: url('img/calendar-shadow-32.png');
     background-size: 37px;
@@ -22,4 +27,9 @@
 .apps-menu #dynamic-clocks-icon.icon-dropshadow {
     background-image: url('img/clocks-shadow-32.png');
     background-size: 41px;
+}
+
+.apps-menu #dynamic-weather-icon.icon-dropshadow {
+    background-image: url('img/weather-shadow-32.png');
+    background-size: 37px;
 }
